# pandas-datareader

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  refresh-fixtures.yml
docs/: Makefile  make.bat
docs/source/: cache.rst  conf.py  configuration.rst  remote_data.rst
docs/source/readers/: alphavantage.rst  famafrench.rst  fred.rst  index.rst  nasdaq-trader.rst  yahoo.rst
docs/source/whatsnew/: v0.10.0.txt  v0.11.0.txt  v0.3.0.txt  v0.6.0.txt  v0.7.0.txt  v0.9.1.txt
kuznets/: __init__.py  config.py  data.py
kuznets/yahoo/: fundamentals.py
pandas_datareader/: __init__.py  _output.py  _testing.py  _utils.py  bankofcanada.py  base.py  config.py  conftest.py  data.py  econdb.py  enigma.py  eurostat.py  exceptions.py  famafrench.py  fred.py  moex.py  nasdaq_trader.py  naver.py  oecd.py  quandl.py  stooq.py  tiingo.py  tsp.py  wb.py
pandas_datareader/av/: __init__.py  forex.py  quotes.py  sector.py  time_series.py
pandas_datareader/compat/: __init__.py
pandas_datareader/iex/: __init__.py  daily.py  deep.py  market.py  ref.py  stats.py  tops.py
pandas_datareader/io/: __init__.py  jsdmx.py  jstat.py  sdmx.py  util.py
pandas_datareader/yahoo/: actions.py  components.py  daily.py  fx.py  options.py  quotes.py
plans/narwhals/: bench_from_dict.py  overview.md  step-00-benchmark.md  step-01-output-toolkit.md  step-02-template-split.md  step-03-simple-readers.md  step-04-sdmx-record-native.md  step-05-daily-panel-yahoo-av.md  step-06-parity-delicate.md  step-07-concurrency.md  step-08-docs-release.md
tests/: _backends.py  _mock.py  conftest.py  test_bankofcanada.py  test_base.py  test_config.py  test_data.py  test_econdb.py  test_enigma.py  test_eurostat.py  test_famafrench.py  test_fred.py  test_iex.py  test_iex_daily.py  test_moex.py  test_nasdaq.py  test_naver.py  test_oecd.py  test_output.py  test_quandl.py  test_stooq.py  test_tiingo.py  test_tsp.py  test_wb.py
tests/av/: test_av_forex.py  test_av_time_series.py
tests/data/bankofcanada/: fx_usd_cad.csv
tests/data/eurostat/: ert_h_eur_a.json
tests/data/famafrench/: data_library.html
tests/data/fred/: dfii5.csv  gdp.csv  gdp_api.json
tests/data/moex/: sber_history.csv  sber_meta.csv
tests/data/nasdaq/: nasdaqtraded.txt
tests/data/naver/: 005930.xml
tests/data/oecd/: tud.json
tests/data/stooq/: spy.csv
tests/data/wb/: bad_indicator.json  countries.json  country_jp_gdp.json  indicators.json
tests/data/yahoo/: chart_aapl_2020.json  chart_empty.json  fundamentals_aapl.json  options_aapl.json  quote_aapl_goog.json
tests/io/: test_jsdmx.py  test_jstat.py  test_util.py
tests/io/data/jsdmx/: land_use.json  oecd1.json  oecd_tud.json  tourism.json
tests/io/data/sdmx/: DSD_cdh_e_fos.xml  cdh_e_fos.xml
tests/yahoo/: test_options.py  test_yahoo.py
tests/yahoo/data/: yahoo_options1.json  yahoo_options2.json
