[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pandas-datareader"
dynamic = ["version"]
requires-python = ">=3.12"
license = {file = "LICENSE.md"}
readme = {file = "README.md", content-type = "text/markdown"}
description = "Pandas-compatible data readers. Formerly a component of pandas."
authors = [
  {name = "The PyData Development Team", email = "pydata@googlegroups.com"},
]
dependencies = [
    "lxml",
    "narwhals>=2.0",
    "pandas>=3.0",
    "requests",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
polars = [
    "polars",
    "pyarrow",
]
pyarrow = [
    "pyarrow",
]
dask = [
    "dask[dataframe]",
]
backends = [
    "pandas-datareader[polars,pyarrow,dask]",
]
dev = [
    "pre-commit",
    "ruff",
    "coverage",
    "codecov",
    "coveralls",
    "pytest>=7.3.0,<8",
    "pytest-xdist",
    "pytest-cov",
    "wrapt",
    "pandas-datareader[polars]",
]
docs = [
    "sphinx",
    "ipython",
    "matplotlib",
    "requests_cache",
    "pydata_sphinx_theme",
    "pickleshare",
]

[project.urls]
Homepage = "https://pandas.pydata.org"
Documentation = "https://pandas-datareader.readthedocs.io/en/latest/"
Repository = "https://github.com/pydata/pandas-datareader.git"
"Bug Tracker" = "https://github.com/pydata/pandas-datareader/issues"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pandas_datareader"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["pandas_datareader/_version.py"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':'
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pandas_datareader"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -m 'not network' --strict-data-files --strict-markers"
testpaths = ["tests"]
markers = [
    "stable: mark a test as applying to a stable reader",
    "requires_api_key: mark a test as requiring an API key",
    "alpha_vantage: mark a test of the AlphaVantage reader",
    "quandl: mark a test of the Quandl reader",
    "network: liveness check that pings a live service (deselected by default; run with -m network)"
    ]
filterwarnings =[
    "ignore:`np.bool` is a deprecated alias:DeprecationWarning:pandas.core.indexes",
    "ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.indexes",
    "ignore:`np.float` is a deprecated alias:DeprecationWarning:pandas.core.indexes",
    "ignore:`np.complex` is a deprecated alias:DeprecationWarning:pandas.core.indexes",
    "ignore:`np.bool` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks",
    "ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks",
    "ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.internals.construction",
    "ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.io.parsers",
    "ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.dtypes.cast",
    "ignore:`np.float` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks",
    "ignore:`np.complex` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks",
    "ignore:Converting `np.inexact` or `np.floating` to a dtype:DeprecationWarning:pandas.core.indexes",
]


[tool.coverage.run]
source = ["pandas_datareader"]
branch = true
include = ["*/pandas_datareader/*"]
omit = [
    "*/_version.py",
    "*/yahoo/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise ImmediateDeprecationError",
    "pass",
]
include = ["*/pandas_datareader/*"]
omit = [
    "*/_version.py",
    "*/yahoo/*",
]
ignore_errors = true
