[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "kuznets"
dynamic = ["version"]
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Economic and financial data readers for pandas, polars, pyarrow, and dask."
authors = [
  {name = "Jesse Grabowski", email = "jessegrabowski@gmail.com"},
]
dependencies = [
    "lxml",
    "narwhals>=2.0",
    "pandas>=3.0",
    "requests",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
polars = [
    "polars",
    "pyarrow",
]
pyarrow = [
    "pyarrow",
]
dask = [
    "dask[dataframe]",
]
backends = [
    "kuznets[polars,pyarrow,dask]",
]
dev = [
    "pre-commit",
    "ruff",
    "coverage",
    "pytest>=8",
    "pytest-xdist",
    "pytest-cov",
    "wrapt",
    "kuznets[backends]",
]
docs = [
    "sphinx",
    "ipython",
    "matplotlib",
    "requests_cache",
    "pydata_sphinx_theme",
    "pickleshare",
]

[project.urls]
Homepage = "https://github.com/jessegrabowski/kuznets"
Documentation = "https://kuznets.readthedocs.io/en/latest/"
Repository = "https://github.com/jessegrabowski/kuznets.git"
"Bug Tracker" = "https://github.com/jessegrabowski/kuznets/issues"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["kuznets"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["kuznets/_version.py"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':'
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["kuznets"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -m 'not network' --strict-data-files --strict-markers"
testpaths = ["tests"]
filterwarnings = ["error"]
markers = [
    "stable: mark a test as applying to a stable reader",
    "requires_api_key: mark a test as requiring an API key",
    "alpha_vantage: mark a test of the AlphaVantage reader",
    "quandl: mark a test of the Quandl reader",
    "network: liveness check that pings a live service (deselected by default; run with -m network)"
    ]
[tool.coverage.run]
source = ["kuznets"]
branch = true
include = ["*/kuznets/*"]
omit = [
    "*/_version.py",
    "*/yahoo/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise ImmediateDeprecationError",
    "pass",
]
include = ["*/kuznets/*"]
omit = [
    "*/_version.py",
    "*/yahoo/*",
]
ignore_errors = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.dependencies]
lxml = "*"
narwhals = ">=2.0"
pandas = ">=3.0"
requests = "*"

[tool.pixi.pypi-dependencies]
kuznets = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = ">=8"
pytest-cov = "*"
pytest-xdist = "*"
coverage = "*"
wrapt = "*"
polars = "*"
pyarrow = "*"
dask = "*"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
ruff = "*"

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
ipython = "*"
matplotlib = "*"
requests-cache = "*"
pydata-sphinx-theme = "*"
pickleshare = "*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
default = { features = ["test", "lint", "py312"], solve-group = "py312" }
py313 = { features = ["test", "py313"] }
py314 = { features = ["test", "py314"] }
docs = { features = ["docs", "py312"], solve-group = "py312" }

[tool.pixi.tasks]
test = "pytest"
test-cov = "pytest tests --durations=25 -n 2 --cov-config pyproject.toml --cov=kuznets --cov-report xml:coverage.xml --cov-report term --junitxml=junit/test-results.xml"
lint = "pre-commit run --all-files"
fmt = "ruff format ."
